fix:scrollbar

--- a/src/assets/css/midautumn/v2/appreciate.less
+++ b/src/assets/css/midautumn/v2/appreciate.less
@@ -40,23 +40,7 @@
         gap: 20px;
         padding-bottom: 30px;
         box-sizing: border-box;
-        &::-webkit-scrollbar {
-            width: 4px;
-            height: 4px;
-        }
-
-        &::-webkit-scrollbar-thumb {
-            border-radius: 5px;
-            -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
-            background-color: #99a9bf;
-        }
-
-        &::-webkit-scrollbar-track {
-            -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
-            border-radius: 5px;
-            background-color: #d3dce6;
-        }
-
+        .w(100%);
         .u-item {
             font-family: "Microsoft YaHei", Arial, sans-serif;
             .size(200px,434px);
