--- a/src/assets/css/midautumn/v2/index.less
+++ b/src/assets/css/midautumn/v2/index.less
@@ -1,7 +1,6 @@
 .p-event-midAutumn {
     height: calc(100vh - 64px);
     .pointer;
-
     .mt(64px);
     background-image: url("@{kv_midAutumn}2.jpg");
     background-repeat: no-repeat;
@@ -13,12 +12,6 @@
         padding: 4vh 0 0 10vw;
         box-sizing: border-box;
         .size(100%);
-        // background-color: rgba(23, 36, 58, 0.85);
-        // background-image: url("@{kv_midAutumn}2.jpg");
-        // background-repeat: no-repeat;
-        // background-size: contain;
-        // background-position: center left;
-
         img {
             height: 85vh;
             cursor: pointer;
@@ -37,11 +30,11 @@
         overflow: auto;
         .size(100%);
         background-color: rgba(23, 36, 58, 0.95);
-
         transition: all 1s ease;
+        .scrollbar;
     }
     .u-main-box {
-        .size(1280px,auto); 
+        max-width: 1300px;
         margin: 0 auto;
         padding: 160px 0 40px 0;
     }
